--- a/index.html
+++ b/index.html
@@ -3,43 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Nature Nest</title>
 
+<link rel="stylesheet" href="/style.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Nature Nest</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">HotSpots Hub</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Districts</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Access Hub
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Sign Up</a></li>
-                  <li><a class="dropdown-item" href="#">Sign In</a></li>
-                  <li><a class="dropdown-item" href="#">Contact Us</a></li>
-                </ul>
-              </li>
+  <!-- Nav bar -->
+  <nav class="navbar navbar-expand-lg bg-info">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Nature Nest</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">HotSpots Hub</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Districts</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Access Hub
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Sign Up</a></li>
+              <li><a class="dropdown-item" href="#">Sign In</a></li>
+              <li><a class="dropdown-item" href="#">Contact Us</a></li>
             </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Jumbotron -->
+    <div class="container jumbotron jumbotron-fluid">
+      <h1 class="display-4" style="color: bisque;">Welcome to Nature Nest!</h1>
+      <p class="lead" style="color: white;">"...where the enchanting beauty of Kerala unfolds before your eyes. Nestled in the southwestern coast of India, Kerala is a tropical paradise that captivates with its lush landscapes, serene backwaters, and pristine beaches. Known as 'God's Own Country,' this vibrant state is a haven for nature enthusiasts and adventure seekers alike. Immerse yourself in the rich cultural tapestry, from traditional Kathakali performances to colorful festivals that celebrate the spirit of Kerala. Explore the tranquil backwaters on a houseboat or unwind on the golden shores of Kovalam. With its diverse flora and fauna, historic monuments, and warm hospitality, Kerala beckons you to experience a harmonious blend of nature and culture. Come, embark on a journey where every moment is a celebration of the extraordinary in the lap of Mother Nature.".</p>
+      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+    </div>
+ 
+
+<!-- Crousel -->
+    <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./Assets/Images/carousel images/alappuzha.jpg" class="d-block w-100" alt="alappuzha">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Alappuzha</h5>
+            <p>The "Venice of the East" offers serene backwaters, houseboat cruises, and the famous Nehru Trophy Boat Race, making it a tranquil gem in God's Own Country.</p>
           </div>
         </div>
-      </nav>
-    
+        <div class="carousel-item">
+          <img src="./Assets/Images/carousel images/munnar.jpg" class="d-block w-100" alt="munnar">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Munnar</h5>
+            <p>A scenic hill station famous for tea plantations, misty hills, and stunning landscapes. Perfect for nature lovers seeking a serene retreat in God's Own Country</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./Assets/Images/carousel images/kochi.jpg" class="d-block w-100" alt="kochi">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Kochi</h5>
+            <p>A historic city on the Arabian Sea, renowned for its colonial architecture, iconic Chinese fishing nets, and vibrant culture.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <br>
+
+        <!-- Districts -->
+          <div class="container">
+            <div class="button-container">
+              <button class="district-button">Thiruvananthapuram</button>
+              <button class="district-button">Kollam</button>
+              <button class="district-button">Alappuzha</button>
+              <button class="district-button">Pathanamthitta</button>
+              <button class="district-button">Kottayam</button>
+              <button class="district-button">Idukki</button>
+              <button class="district-button">Ernakulam</button>
+              <button class="district-button">Thrissur</button>
+              <button class="district-button">Palakkad</button>
+              <button class="district-button">Malappuram</button>
+              <button class="district-button">Kozhikode</button>
+              <button class="district-button">Wayanad</button>
+              <button class="district-button">Kannur</button>
+              <button class="district-button">Kasaragod</button>
+            </div>
+          </div>
+     
+  
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
