--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
           <div class="container">
             <div class="button-container">
               <a href="/Assets/dist/tvm/index.html" class="district-button">Thiruvananthapuram</a>
-              <a href="your_link_here" class="district-button">Kollam</a>
-              <a href="your_link_here" class="district-button">Alappuzha</a>
-              <a href="your_link_here" class="district-button">Pathanamthitta</a>
-              <a href="your_link_here" class="district-button">Kottayam</a>
+              <a href="/Assets/dist/Kollam/index.html" class="district-button">Kollam</a>
+              <a href="/Assets/dist/Alappuzha/index.html" class="district-button">Alappuzha</a>
+              <a href="/Assets/dist/Pathanamthitta/index.html" class="district-button">Pathanamthitta</a>
+              <a href="/Assets/dist/Kottayam/index.html" class="district-button">Kottayam</a>
               <a href="your_link_here" class="district-button">Idukki</a>
               <a href="your_link_here" class="district-button">Ernakulam</a>
               <a href="your_link_here" class="district-button">Thrissur</a>
