Till thrissur added

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
               <a href="/Assets/dist/Alappuzha/index.html" class="district-button">Alappuzha</a>
               <a href="/Assets/dist/Pathanamthitta/index.html" class="district-button">Pathanamthitta</a>
               <a href="/Assets/dist/Kottayam/index.html" class="district-button">Kottayam</a>
-              <a href="your_link_here" class="district-button">Idukki</a>
-              <a href="your_link_here" class="district-button">Ernakulam</a>
-              <a href="your_link_here" class="district-button">Thrissur</a>
+              <a href="/Assets/dist/Idukki/index.html" class="district-button">Idukki</a>
+              <a href="/Assets/dist/Ernakulam/index.html" class="district-button">Ernakulam</a>
+              <a href="/Assets/dist/Thrissur/index.html" class="district-button">Thrissur</a>
               <a href="your_link_here" class="district-button">Palakkad</a>
               <a href="your_link_here" class="district-button">Malappuram</a>
               <a href="your_link_here" class="district-button">Kozhikode</a>
