--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
               <a href="/Assets/dist/Idukki/index.html" class="district-button">Idukki</a>
               <a href="/Assets/dist/Ernakulam/index.html" class="district-button">Ernakulam</a>
               <a href="/Assets/dist/Thrissur/index.html" class="district-button">Thrissur</a>
-              <a href="your_link_here" class="district-button">Palakkad</a>
-              <a href="your_link_here" class="district-button">Malappuram</a>
+              <a href="/Assets/dist/Palakkad/index.html" class="district-button">Palakkad</a>
+              <a href="/Assets/dist/Malappuram/index.html" class="district-button">Malappuram</a>
               <a href="your_link_here" class="district-button">Kozhikode</a>
               <a href="your_link_here" class="district-button">Wayanad</a>
               <a href="your_link_here" class="district-button">Kannur</a>
