--- a/index.html
+++ b/index.html
@@ -104,16 +104,13 @@
               <a href="/Assets/dist/Thrissur/index.html" class="district-button">Thrissur</a>
               <a href="/Assets/dist/Palakkad/index.html" class="district-button">Palakkad</a>
               <a href="/Assets/dist/Malappuram/index.html" class="district-button">Malappuram</a>
-              <a href="your_link_here" class="district-button">Kozhikode</a>
-              <a href="your_link_here" class="district-button">Wayanad</a>
-              <a href="your_link_here" class="district-button">Kannur</a>
-              <a href="your_link_here" class="district-button">Kasaragod</a>
+              <a href="/Assets/dist/Kozhikode/index.html" class="district-button">Kozhikode</a>
+              <a href="/Assets/dist/Wayanad/index.html" class="district-button">Wayanad</a>
+              <a href="/Assets/dist/Kannur/index.html" class="district-button">Kannur</a>
+              <a href="/Assets/dist/Kasaragod/index.html" class="district-button">Kasaragod</a>
             </div>
           </div>
-     <br>
-    <!-- sign in page -->
-     
-          
+     <br> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
