Login/Signup page added

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
               Access Hub
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Sign Up</a></li>
-              <li><a class="dropdown-item" href="#">Sign In</a></li>
+              <li><a class="dropdown-item" href="/Assets/AccessHub/index.html">Login/Sign-Up</a></li>
               <li><a class="dropdown-item" href="#">Contact Us</a></li>
             </ul>
           </li>
@@ -91,8 +90,7 @@
       </button>
     </div>
 
-        <!-- Districts -->
-        
+        <!-- Districts -->        
           <div class="container">
             <section id="districts">
             <div class="button-container">
