--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/Assets/AccessHub/index.html">Login/Sign-Up</a></li>
-              <li><a class="dropdown-item" href="#">Contact Us</a></li>
+              <li><a class="dropdown-item" href="/Assets/ContactUs/index.html">Contact Us</a></li>
             </ul>
           </li>
         </ul>
