path updated again

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
               Access Hub
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/Assets/AccessHub/index.html">Login/Sign-Up</a></li>
-              <li><a class="dropdown-item" href="/Assets/ContactUs/index.html">Contact Us</a></li>
+              <li><a class="dropdown-item" href="./Assets/AccessHub/index.html">Login/Sign-Up</a></li>
+              <li><a class="dropdown-item" href="./Assets/ContactUs/index.html">Contact Us</a></li>
             </ul>
           </li>
         </ul>
@@ -94,20 +94,20 @@
           <div class="container">
             <section id="districts">
             <div class="button-container">
-              <a href="/Assets/dist/tvm/index.html" class="district-button">Thiruvananthapuram</a>
-              <a href="/Assets/dist/Kollam/index.html" class="district-button">Kollam</a>
-              <a href="/Assets/dist/Alappuzha/index.html" class="district-button">Alappuzha</a>
-              <a href="/Assets/dist/Pathanamthitta/index.html" class="district-button">Pathanamthitta</a>
-              <a href="/Assets/dist/Kottayam/index.html" class="district-button">Kottayam</a>
-              <a href="/Assets/dist/Idukki/index.html" class="district-button">Idukki</a>
-              <a href="/Assets/dist/Ernakulam/index.html" class="district-button">Ernakulam</a>
-              <a href="/Assets/dist/Thrissur/index.html" class="district-button">Thrissur</a>
-              <a href="/Assets/dist/Palakkad/index.html" class="district-button">Palakkad</a>
-              <a href="/Assets/dist/Malappuram/index.html" class="district-button">Malappuram</a>
-              <a href="/Assets/dist/Kozhikode/index.html" class="district-button">Kozhikode</a>
-              <a href="/Assets/dist/Wayanad/index.html" class="district-button">Wayanad</a>
-              <a href="/Assets/dist/Kannur/index.html" class="district-button">Kannur</a>
-              <a href="/Assets/dist/Kasaragod/index.html" class="district-button">Kasaragod</a>
+              <a href="./Assets/dist/tvm/index.html" class="district-button">Thiruvananthapuram</a>
+              <a href="./Assets/dist/Kollam/index.html" class="district-button">Kollam</a>
+              <a href="./Assets/dist/Alappuzha/index.html" class="district-button">Alappuzha</a>
+              <a href="./Assets/dist/Pathanamthitta/index.html" class="district-button">Pathanamthitta</a>
+              <a href="./Assets/dist/Kottayam/index.html" class="district-button">Kottayam</a>
+              <a href="./Assets/dist/Idukki/index.html" class="district-button">Idukki</a>
+              <a href="./Assets/dist/Ernakulam/index.html" class="district-button">Ernakulam</a>
+              <a href="./Assets/dist/Thrissur/index.html" class="district-button">Thrissur</a>
+              <a href="./Assets/dist/Palakkad/index.html" class="district-button">Palakkad</a>
+              <a href="./Assets/dist/Malappuram/index.html" class="district-button">Malappuram</a>
+              <a href="./Assets/dist/Kozhikode/index.html" class="district-button">Kozhikode</a>
+              <a href="./Assets/dist/Wayanad/index.html" class="district-button">Wayanad</a>
+              <a href="./Assets/dist/Kannur/index.html" class="district-button">Kannur</a>
+              <a href="./Assets/dist/Kasaragod/index.html" class="district-button">Kasaragod</a>
             </div>
           </section>
           </div>
