--- a/Assets/AccessHub/index.html
+++ b/Assets/AccessHub/index.html
@@ -40,22 +40,27 @@
                 <div class="sign-up-form">
                     <div class="group">
                         <label for="user" class="label">Username</label>
-                        <input id="user" type="text" class="input" placeholder="Create your Username">
+                        <input id="signup-user" type="text" class="input" placeholder="Create your Username" onkeyup="validateSignupName()">
+                        <span id="signup-username-error"></span>
                     </div>
                     <div class="group">
                         <label for="pass" class="label">Password</label>
-                        <input id="pass" type="password" class="input" data-type="password" placeholder="Create your password">
+                        <input id="sign-up-pass" type="password" class="input" data-type="password" placeholder="Create your password" onkeyup="validateSignupPassword()">
+                        <span id="signup-password-error"></span>
                     </div>
                     <div class="group">
                         <label for="pass" class="label">Repeat Password</label>
-                        <input id="pass" type="password" class="input" data-type="password" placeholder="Repeat your password">
+                        <input id="signup-repeat-pass" type="password" class="input" data-type="password" placeholder="Repeat your password" onkeyup="validateRepeatPassword()">
+                        <span id="repeat-password-error"></span>
                     </div>
                     <div class="group">
                         <label for="pass" class="label">Email Address</label>
-                        <input id="pass" type="text" class="input" placeholder="Enter your email address">
+                        <input id="email" type="text" class="input" placeholder="Enter your email address" onkeyup="validateEmail()">
+                        <span id="email-error"></span>
                     </div>
                     <div class="group">
-                        <input type="submit" class="button" value="Sign Up">
+                        <input type="submit" class="button" value="Sign Up" id="sign-up" onkeyup="validateSignup()">
+                        <span id="signup-error"></span>
                     </div>
                     <div class="hr"></div>
                     <div class="foot">
